--- a/frontend/nestin/src/app/components/header/header.component.css
+++ b/frontend/nestin/src/app/components/header/header.component.css
@@ -27,6 +27,65 @@
   transition: all 0.3s ease;
   border-radius: 25px;
 }
+/*input */
+.search-box button input {
+  width: 100%;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 50px;
+  font-size: 14px;
+  outline: none;
+  margin-top: 0.5rem;
+}
+.search-box .form-control::placeholder {
+  color: #6c757d;
+  font-size: 14px;
+}
+.search-box ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+  margin-top: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.search-box ul li {
+  padding: 0.8rem;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.search-box ul li:hover {
+  background-color: #f1f1f1;
+}
+
+.search-box button:focus input {
+  background-color: #fff;
+}
+
+.search-box button:focus {
+  outline: none;
+}
+ul.list-group {
+  top: 100%;
+  left: 0;
+}
+/* تحسين مظهر القائمة المنسدلة */
+.search-box ul li {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.search-box ul li:hover {
+  background-color: #f1f1f1;
+}
 /* .search-box .btn i{
   pointer-events: none;
 } */
