--- a/frontend/nestin/src/app/pages/home/home.component.css
+++ b/frontend/nestin/src/app/pages/home/home.component.css
@@ -1,13 +1,35 @@
+/*categories*/
+.categories-container{
+  border-bottom: 1px solid #e0e0e0;
+  white-space: nowrap;
+  scroll-snap-type: x mandatory;
+  flex: 1 1 auto;
+  max-width: 70%;
+}
+.category-item {
+  flex: 0 0 auto;
+  scroll-snap-align: start;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.category-item:hover {
+  color: #0e0d0d;
+  transform: scale(1.05);
+}
 /*right buttons style*/
 .buttons-container {
-    position: absolute;
-    top: 180px; 
-    right: 20px; 
     display: flex;
+    justify-content: end;
+    flex-shrink: 0;
+    top: 180px; 
+    right: 15px; 
     gap: 10px; 
+    padding-right: 8px;
+    margin-top: 10px;
+    margin-right: 5px;
   }
   
-  .btn {
+  .buttons-container .btn {
     background-color: #ffffff; 
     color: black;
     border: black solid 1px;
@@ -47,5 +69,24 @@
   border-radius: 10px;
   background-color: #fff;
   
+}
+/*map button style*/
+.map-button {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  padding: 10px 20px;
+  background-color: #2a2a2b;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.map-button:hover {
+  transform: translate(-50%, -50%) scale(1.05);
 }
 
