--- a/frontend/nestin/src/app/pages/home/home.component.html
+++ b/frontend/nestin/src/app/pages/home/home.component.html
@@ -1,27 +1,44 @@
+<div class=" d-flex  align-items-center my-3 flex-wrap gap-2" >
+<!--categories-->
+<div class="categories-container d-flex overflow-auto my-4 gap-3 py-2 flex-grow-1">
+    <div
+      *ngFor="let category of categories"
+      class="category-item text-center px-3 d-flex flex-column align-items-center"
+      style="cursor: pointer;"
+    >
+      <i [class]="category.icon"></i>
+      <span class="small mt-1">{{ category.name }}</span>
+    </div>
+    <!-- right buttons -->
+</div> 
+<!--end of categories-->
 <!-- right buttons -->
-<div class="buttons-container">
-    <button class="btn">Filters</button>
-    <button class="btn">Display total before taxes </button>
-
+<div class="buttons-container d-md-flex d-none gap-2 justify-content-md-end">
+  <button class="btn">Filters</button>
+  <button class="btn">Display total before taxes </button>
 </div>
+</div>
+
+
+
 
 
 <!-- Cards -->
 <div class="container mb-4 py-5" id="cards">
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <!-- card 1 -->
-        <div class="col">
+        <div class="col" *ngFor="let prop of properties">
   <div class="card" style="width: 16rem;">
-    <img src="..." class="card-img-top" alt="here is photo">
+    <img [src]="prop.imageUrl" class="card-img-top" alt="property photo">
     <div class="card-body">
-      <h5 class="card-title">Ubud Gianyar , Indonesia</h5>
-      <p class="card-text text-muted">9,951 kilometers away <br> Jun 16 - 21 </p>
-      <h6 class="card-text">6,917 ج.م night</h6>
+      <h5 class="card-title">{{prop.name}}</h5>
+      <p class="card-text text-muted">{{prop.distanceFromMe}} km away <br> Jun 16 - 21 </p>
+      <h6 class="card-text">{{prop.pricePerNight}} ج.م night</h6>
     </div>
   </div>
         </div>
    <!-- card 2 -->
-   <div class="col">
+   <!-- <div class="col">
   <div class="card" style="width: 16rem;">
     <img src="..." class="card-img-top" alt="here is photo">
     <div class="card-body">
@@ -30,9 +47,9 @@
       <h6 class="card-text">6,917 ج.م night</h6>
     </div>
   </div>
-   </div>
+   </div> -->
    <!--card 3 -->
-   <div class="col">
+   <!-- <div class="col">
     <div class="card" style="width: 16rem;">
       <img src="..." class="card-img-top" alt="here is photo">
       <div class="card-body">
@@ -41,9 +58,9 @@
         <h6 class="card-text">6,917 ج.م night</h6>
       </div>
     </div>
-     </div>
+     </div> -->
      <!-- card 4 -->
-     <div class="col">
+     <!-- <div class="col">
         <div class="card" style="width: 16rem;">
           <img src="..." class="card-img-top" alt="here is photo">
           <div class="card-body">
@@ -53,8 +70,11 @@
           </div>
         </div>
          </div>
-    </div>
+    </div> -->
 </div>
-
+<!--map button-->
+<button class="map-button" [ngStyle]="{ bottom: isFooterVisible ? '100px' : '20px' }" (click)="toggleView()">
+  {{ buttonText }}
+</button>
 
 
