feat(frontend): complete login page

--- a/frontend/nestin/src/app/pages/register-page/register-page.component.html
+++ b/frontend/nestin/src/app/pages/register-page/register-page.component.html
@@ -1,8 +1,8 @@
 <div class="container py-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-lg-6">
-      <div class="container h-100">
-        <img src="logo.png" alt="" class="w-100 object-fit-contain" />
+      <div class="container h-100 d-flex justify-content-center">
+        <img src="logo.png" alt="" class="object-fit-contain logo" />
       </div>
     </div>
     <div class="col-lg-6">
