feat(frontend): fix authservice and enhance header

--- a/frontend/nestin/src/app/pages/login-page/login-page.component.html
+++ b/frontend/nestin/src/app/pages/login-page/login-page.component.html
@@ -62,11 +62,10 @@
             {{ errorMessage }}
           </div>
 
-          <button
+          <input
             type="submit"
-            class="btn form-control btn btn-primary text-white fw-semibold">
-            {{ 'Login' }}
-          </button>
+            class="btn form-control btn btn-primary text-white fw-semibold"
+            value="Login" />
 
           <div class="d-flex justify-content-between mt-3 flex-wrap gap-2">
             <a routerLink="/register" class="text-decoration-none">
