--- a/frontend/nestin/src/app/components/header/header.component.html
+++ b/frontend/nestin/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="mb-6">
+<header class="mb-7">
   <nav appStickyNav class="navbar navbar-expand-lg fixed-top fw-semibold">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">
@@ -25,19 +25,19 @@
               >Home</a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signup" routerLinkActive="active"
-              >Singn</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/pricing" routerLinkActive="active"
-              >Pricing</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
+          @if (isAuthenticated) {
+            <li class="nav-item">
+              <a class="nav-link" (click)="logout()" style="cursor: pointer"
+                >Logout</a
+              >
+            </li>
+          } @else {
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/login" routerLinkActive="active"
+                >Login</a
+              >
+            </li>
+          }
         </ul>
       </div>
     </div>
