--- a/frontend/nestin/src/app/pages/register-page/register-page.component.html
+++ b/frontend/nestin/src/app/pages/register-page/register-page.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-6">
       <div class="container d-flex flex-column gap-4">
-        <h2 class="text-primary text-center">Sign Up</h2>
+        <h2 class="text-primary text-center">Register</h2>
         <form
           id="signupForm"
           [formGroup]="signupForm"
