--- a/frontend/nestin/src/app/components/header/header.component.html
+++ b/frontend/nestin/src/app/components/header/header.component.html
@@ -1,11 +1,13 @@
 <header class="mb-7">
-  <nav appStickyNav class="navbar navbar-expand-lg fixed-top fw-semibold">
+  <nav
+    appStickyNav
+    class="navbar navbar-expand-lg fixed-top fw-semibold bg-white">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">
         <img
           src="logo2.png"
           alt="Logo"
-          width="100"
+          width="120"
           class="d-inline-block align-text-top" />
       </a>
       <button
@@ -16,26 +18,72 @@
         aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <lucide-icon [img]="icons.menu" class="my-icon" size="18"></lucide-icon>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav d-flex ms-auto gap-3">
+        <ul class="navbar-nav d-flex ms-auto gap-4 align-items-center">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/home" routerLinkActive="active"
-              >Home</a
-            >
+            <a
+              class="nav-link d-flex align-items-center gap-1"
+              routerLink="/home"
+              routerLinkActive="active">
+              <lucide-icon
+                [img]="icons.home"
+                class="my-icon"
+                size="18"></lucide-icon>
+              <span>Home</span>
+            </a>
           </li>
+
           @if (isAuthenticated) {
             <li class="nav-item">
-              <a class="nav-link" (click)="logout()" style="cursor: pointer"
-                >Logout</a
-              >
+              <a
+                class="nav-link d-flex align-items-center gap-1"
+                routerLink="/favorites"
+                routerLinkActive="active">
+                <lucide-icon
+                  [img]="icons.heart"
+                  class="my-icon"
+                  size="18"></lucide-icon>
+                <span>Favorites</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link d-flex align-items-center gap-1"
+                routerLink="/profile"
+                routerLinkActive="active">
+                <lucide-icon
+                  [img]="icons.user"
+                  class="my-icon"
+                  size="18"></lucide-icon>
+                <span>Profile</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link d-flex align-items-center gap-1"
+                (click)="logout()"
+                style="cursor: pointer">
+                <lucide-icon
+                  [img]="icons.logout"
+                  class="my-icon"
+                  size="18"></lucide-icon>
+                <span>Logout</span>
+              </a>
             </li>
           } @else {
             <li class="nav-item">
-              <a class="nav-link" routerLink="/login" routerLinkActive="active"
-                >Login</a
-              >
+              <a
+                class="nav-link d-flex align-items-center gap-1"
+                routerLink="/login"
+                routerLinkActive="active">
+                <lucide-icon
+                  [img]="icons.login"
+                  class="my-icon"
+                  size="18"></lucide-icon>
+                <span>Login</span>
+              </a>
             </li>
           }
         </ul>
