feat(frontend): add footer

--- a/frontend/nestin/src/app/components/footer/footer.component.html
+++ b/frontend/nestin/src/app/components/footer/footer.component.html
@@ -1,5 +1,69 @@
-<div class="containter bg-secondary">
-  <div class="d-flex justify-content-center p-5">
-    <p>footer works!</p>
+<footer class="text-bg-dark py-5 mt-5">
+  <div class="container">
+    <div class="row gy-4">
+      <!-- Support -->
+      <div class="col-12 col-md-4">
+        <h5 class="text-white mb-3">Support</h5>
+        <ul class="list-unstyled d-flex flex-column gap-1">
+          @for (link of supportLinks; track link) {
+            <li>
+              <a [href]="link.url" class="text-decoration-none small">
+                {{ link.text }}
+              </a>
+            </li>
+          }
+        </ul>
+      </div>
+
+      <!-- Nestin -->
+      <div class="col-12 col-md-4">
+        <h5 class="text-white mb-3">Nestin</h5>
+        <ul class="list-unstyled d-flex flex-column gap-1">
+          @for (link of nestinLinks; track link) {
+            <li>
+              <a [href]="link.url" class="text-decoration-none small">
+                {{ link.text }}
+              </a>
+            </li>
+          }
+        </ul>
+      </div>
+
+      <!-- Legal -->
+      <div class="col-12 col-md-4">
+        <h5 class="text-white mb-3">Legal</h5>
+        <ul class="list-unstyled d-flex flex-column gap-1">
+          @for (link of legalLinks; track link) {
+            <li>
+              <a [href]="link.url" class="text-decoration-none small">
+                {{ link.text }}
+              </a>
+            </li>
+          }
+        </ul>
+      </div>
+    </div>
+
+    <hr class="border-secondary my-4" />
+
+    <!-- Bottom Row -->
+    <div
+      class="d-flex flex-column flex-md-row justify-content-between align-items-center text-light small">
+      <div class="d-flex align-items-center gap-1">
+        <lucide-icon [img]="icons.copyright" size="14"></lucide-icon>
+        <span>2025 Nestin, Inc. All rights reserved.</span>
+      </div>
+      <div class="d-flex gap-3 mt-3 mt-md-0">
+        <a href="#" class="text-light">
+          <lucide-icon [img]="icons.facebook" size="18"></lucide-icon>
+        </a>
+        <a href="#" class="text-light">
+          <lucide-icon [img]="icons.twitter" size="18"></lucide-icon>
+        </a>
+        <a href="#" class="text-light">
+          <lucide-icon [img]="icons.instagram" size="18"></lucide-icon>
+        </a>
+      </div>
+    </div>
   </div>
-</div>
+</footer>
