feat(frontend): add layouts

--- a/frontend/nestin/src/app/pages/home-page/home-page.component.html
+++ b/frontend/nestin/src/app/pages/home-page/home-page.component.html
@@ -1,116 +1,104 @@
-<div class="d-flex flex-column" style="min-height: 100vh">
-  <app-header></app-header>
-  <div class="container flex-grow-1">
-    <p>home-page works!</p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nam
-      asperiores corrupti impedit cupiditate, necessitatibus aut maiores optio
-      officiis ex beatae quos nesciunt neque odio vero consectetur suscipit.
-      Temporibus aliquid vero error repellat doloribus excepturi velit, eaque
-      laboriosam perferendis placeat quibusdam hic maiores voluptatum soluta? At
-      necessitatibus commodi nam totam similique molestias in iure aut ea
-      blanditiis est quidem nemo doloribus mollitia asperiores cupiditate,
-      voluptatum, eligendi quod amet consequatur quisquam dolorum ipsa ab
-      praesentium. Animi id ipsum laboriosam maxime quaerat error minus quia
-      fugit eius ullam, dicta excepturi? Magni dolorem aliquam ea maxime nulla
-      perspiciatis, laudantium non unde, eveniet amet perferendis. Temporibus
-      modi quia impedit sunt, nostrum nisi delectus eligendi ad et esse rem
-      assumenda voluptates! Ea reprehenderit tempora quo dolore deserunt
-      doloremque dignissimos a vero eaque, voluptatibus cumque maxime odit id,
-      culpa ad necessitatibus tempore consequatur, blanditiis rerum. Incidunt
-      eius dolore dicta hic ad repudiandae impedit maiores libero porro
-      reprehenderit adipisci reiciendis, at quidem voluptas veniam natus
-      blanditiis nihil veritatis voluptates saepe quo molestiae recusandae
-      deserunt quod. Fugiat, ipsam? Itaque ducimus, voluptatibus quo ipsam odio,
-      non quisquam inventore doloribus dolorem, officiis assumenda ipsum
-      suscipit officia possimus expedita qui excepturi ab perspiciatis tenetur
-      enim incidunt similique molestias repellendus recusandae! Ratione
-      perferendis sit odio, ipsum porro ipsam quo. Illo voluptas id non laborum,
-      et cumque animi, modi eveniet suscipit alias mollitia. Cumque nobis
-      beatae, aspernatur, labore maiores mollitia voluptates illo optio, animi
-      soluta incidunt vitae laborum reiciendis corporis corrupti fugiat
-      voluptatum alias deserunt sit voluptas? Provident, aliquid nemo sint
-      tenetur in laudantium, inventore minus voluptatem autem delectus sit natus
-      quaerat cumque soluta ipsum at ex, a sed reiciendis voluptates
-      perspiciatis magni dolore! Repellendus, quidem totam a quis, explicabo
-      iure cum illo aliquid accusamus commodi possimus praesentium sequi.
-      Accusamus, hic laboriosam! Incidunt, distinctio? Error culpa aliquid cum
-      sequi quos et ab. Eligendi, laboriosam id. Nemo ut, laboriosam culpa
-      numquam provident magnam alias facere dignissimos natus, dicta quae quas
-      maxime officiis doloremque excepturi, non sequi facilis commodi
-      voluptatem. Placeat commodi, odio sapiente ullam quasi assumenda repellat
-      doloribus repellendus praesentium debitis? Aperiam at saepe, iste ipsa
-      quam voluptatem quidem nobis cupiditate consequuntur doloribus, debitis
-      asperiores iure quo inventore est quasi amet minima rerum! Voluptatibus
-      cumque voluptatem amet natus aperiam suscipit provident vel unde laborum
-      fugit inventore ipsum saepe praesentium quis, non recusandae voluptates
-      vitae ducimus iusto error blanditiis enim nulla distinctio. Aliquam
-      debitis totam quae nostrum incidunt explicabo maxime quos consectetur
-      voluptates blanditiis accusamus maiores at natus aspernatur, sunt commodi
-      rem? Ullam dicta hic dolores voluptatibus, voluptate repellat facere! Eius
-      nihil minima, repellat omnis vel est rerum animi tempore voluptas, nulla
-      ipsa quod voluptatem saepe officiis! Voluptate reprehenderit facere eius
-      impedit, quam expedita. Pariatur ullam possimus suscipit dolores.
-      Aspernatur suscipit cumque ratione impedit, quidem voluptates ipsum itaque
-      ipsam quod velit dolorem! Accusantium qui obcaecati, mollitia maxime enim
-      nostrum iste porro illo quod eius numquam, alias earum explicabo
-      blanditiis quidem? Sunt facere corrupti quos quasi. Magni ducimus debitis
-      voluptates quia alias sed velit porro sunt nemo, distinctio adipisci amet,
-      possimus consectetur, repellendus eaque inventore numquam totam
-      blanditiis? Ipsa quo natus eveniet assumenda, nulla minima. Ut quod
-      praesentium quibusdam tempora quia, rem consequatur nulla dolore illo
-      error ab labore accusamus odit laboriosam? Odit architecto tempora
-      voluptatum magnam sunt neque obcaecati enim provident aliquam, dolor,
-      aperiam, quas eos similique nam pariatur. Placeat est at aut error quaerat
-      nihil quam optio excepturi deserunt recusandae distinctio magnam
-      consequuntur ullam possimus ex asperiores ab harum pariatur, eaque ad
-      voluptas quo architecto neque nostrum? Quos impedit dolores doloribus
-      placeat, quod sint eos blanditiis maxime fugit at quia eaque nostrum
-      maiores laboriosam? Quis architecto itaque est iste eos voluptates
-      dolores, nihil tempore quidem, sapiente distinctio atque incidunt
-      laudantium, ab saepe explicabo natus aperiam magnam harum temporibus
-      officia fuga adipisci dolorum libero! Libero incidunt optio nesciunt quo,
-      facilis tempore veniam sed dolore possimus quibusdam voluptas dignissimos
-      cupiditate nisi repellendus odit repellat quaerat? Ducimus ex tempora,
-      nemo dolore aliquam id dolorem illum rerum reiciendis atque, architecto
-      sed qui quam laudantium aperiam fugiat. Placeat nesciunt laborum neque
-      nobis amet, optio sit aspernatur inventore exercitationem cum facere
-      praesentium doloribus eos at? Amet totam ad tempore optio maiores minus
-      inventore quo vitae adipisci ullam, odio voluptas commodi iure accusamus
-      vero voluptatem quod in eveniet aliquid veritatis rem illo! Porro
-      provident nam, earum quae hic nostrum fuga ratione quibusdam commodi,
-      nulla non reiciendis rem distinctio dolorum dolor aspernatur nisi numquam
-      ducimus eaque! Labore dicta placeat numquam ut doloribus molestiae
-      accusantium voluptatem autem assumenda aperiam? Deserunt repudiandae
-      dolore cum harum! Laudantium dolorem nam, ratione tempore rem consequuntur
-      quas quos, numquam dignissimos accusamus a reiciendis aliquid minus
-      distinctio magni voluptas maiores eligendi repellat est similique itaque
-      ab. Veritatis ab autem nobis, nam recusandae maxime, maiores consequatur
-      sapiente earum ipsum minus quod delectus officiis est quia voluptate. Quis
-      esse, qui amet similique id expedita accusamus placeat quasi distinctio in
-      et! Architecto repellendus id esse facilis ratione voluptate animi
-      necessitatibus culpa nam, accusamus non magni, nulla, fugit quasi quis
-      perferendis quam nihil placeat nesciunt exercitationem commodi eligendi
-      praesentium? Dicta exercitationem porro vitae. Laudantium adipisci quasi
-      placeat voluptate architecto doloribus hic libero vel quo exercitationem,
-      magnam sapiente molestiae, atque dolores illum voluptatibus. Fuga quasi
-      recusandae quis blanditiis ipsum officiis accusamus reprehenderit,
-      voluptas perferendis nulla reiciendis nostrum obcaecati suscipit dolorum
-      consectetur fugiat delectus laudantium assumenda aliquam temporibus sunt a
-      possimus. Qui nemo suscipit quisquam iste, nisi sit error? Similique ab ut
-      suscipit repellat rerum magnam dolores molestias facilis, tenetur est
-      pariatur quis architecto? Impedit sapiente sint maiores debitis saepe a
-      assumenda dolorem cum, est pariatur nam? Quaerat voluptatem nostrum
-      blanditiis, tenetur quia officiis deserunt, rem veritatis eum tempora
-      distinctio delectus voluptatibus optio molestias dolore accusantium id
-      totam quas aut vel iste sed aperiam. Odio tenetur consequatur iste
-      voluptate provident delectus quod corrupti nostrum quia soluta eos cum
-      rem, voluptatem, vitae quas corporis porro totam eum assumenda veritatis
-      deserunt repellendus obcaecati. Eum delectus error harum quam reiciendis
-      consequuntur, eaque nostrum ipsam quas ut voluptatibus quos architecto
-      porro alias enim ad at soluta maxime autem. Nesciunt dolorum molestiae
-      illum, eveniet laudantium illo officiis error assumenda reprehenderit.
-    </p>
-  </div>
-  <app-footer></app-footer>
-</div>
+<p>home-page works!</p>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nam
+  asperiores corrupti impedit cupiditate, necessitatibus aut maiores optio
+  officiis ex beatae quos nesciunt neque odio vero consectetur suscipit.
+  Temporibus aliquid vero error repellat doloribus excepturi velit, eaque
+  laboriosam perferendis placeat quibusdam hic maiores voluptatum soluta? At
+  necessitatibus commodi nam totam similique molestias in iure aut ea blanditiis
+  est quidem nemo doloribus mollitia asperiores cupiditate, voluptatum, eligendi
+  quod amet consequatur quisquam dolorum ipsa ab praesentium. Animi id ipsum
+  laboriosam maxime quaerat error minus quia fugit eius ullam, dicta excepturi?
+  Magni dolorem aliquam ea maxime nulla perspiciatis, laudantium non unde,
+  eveniet amet perferendis. Temporibus modi quia impedit sunt, nostrum nisi
+  delectus eligendi ad et esse rem assumenda voluptates! Ea reprehenderit
+  tempora quo dolore deserunt doloremque dignissimos a vero eaque, voluptatibus
+  cumque maxime odit id, culpa ad necessitatibus tempore consequatur, blanditiis
+  rerum. Incidunt eius dolore dicta hic ad repudiandae impedit maiores libero
+  porro reprehenderit adipisci reiciendis, at quidem voluptas veniam natus
+  blanditiis nihil veritatis voluptates saepe quo molestiae recusandae deserunt
+  quod. Fugiat, ipsam? Itaque ducimus, voluptatibus quo ipsam odio, non quisquam
+  inventore doloribus dolorem, officiis assumenda ipsum suscipit officia
+  possimus expedita qui excepturi ab perspiciatis tenetur enim incidunt
+  similique molestias repellendus recusandae! Ratione perferendis sit odio,
+  ipsum porro ipsam quo. Illo voluptas id non laborum, et cumque animi, modi
+  eveniet suscipit alias mollitia. Cumque nobis beatae, aspernatur, labore
+  maiores mollitia voluptates illo optio, animi soluta incidunt vitae laborum
+  reiciendis corporis corrupti fugiat voluptatum alias deserunt sit voluptas?
+  Provident, aliquid nemo sint tenetur in laudantium, inventore minus voluptatem
+  autem delectus sit natus quaerat cumque soluta ipsum at ex, a sed reiciendis
+  voluptates perspiciatis magni dolore! Repellendus, quidem totam a quis,
+  explicabo iure cum illo aliquid accusamus commodi possimus praesentium sequi.
+  Accusamus, hic laboriosam! Incidunt, distinctio? Error culpa aliquid cum sequi
+  quos et ab. Eligendi, laboriosam id. Nemo ut, laboriosam culpa numquam
+  provident magnam alias facere dignissimos natus, dicta quae quas maxime
+  officiis doloremque excepturi, non sequi facilis commodi voluptatem. Placeat
+  commodi, odio sapiente ullam quasi assumenda repellat doloribus repellendus
+  praesentium debitis? Aperiam at saepe, iste ipsa quam voluptatem quidem nobis
+  cupiditate consequuntur doloribus, debitis asperiores iure quo inventore est
+  quasi amet minima rerum! Voluptatibus cumque voluptatem amet natus aperiam
+  suscipit provident vel unde laborum fugit inventore ipsum saepe praesentium
+  quis, non recusandae voluptates vitae ducimus iusto error blanditiis enim
+  nulla distinctio. Aliquam debitis totam quae nostrum incidunt explicabo maxime
+  quos consectetur voluptates blanditiis accusamus maiores at natus aspernatur,
+  sunt commodi rem? Ullam dicta hic dolores voluptatibus, voluptate repellat
+  facere! Eius nihil minima, repellat omnis vel est rerum animi tempore
+  voluptas, nulla ipsa quod voluptatem saepe officiis! Voluptate reprehenderit
+  facere eius impedit, quam expedita. Pariatur ullam possimus suscipit dolores.
+  Aspernatur suscipit cumque ratione impedit, quidem voluptates ipsum itaque
+  ipsam quod velit dolorem! Accusantium qui obcaecati, mollitia maxime enim
+  nostrum iste porro illo quod eius numquam, alias earum explicabo blanditiis
+  quidem? Sunt facere corrupti quos quasi. Magni ducimus debitis voluptates quia
+  alias sed velit porro sunt nemo, distinctio adipisci amet, possimus
+  consectetur, repellendus eaque inventore numquam totam blanditiis? Ipsa quo
+  natus eveniet assumenda, nulla minima. Ut quod praesentium quibusdam tempora
+  quia, rem consequatur nulla dolore illo error ab labore accusamus odit
+  laboriosam? Odit architecto tempora voluptatum magnam sunt neque obcaecati
+  enim provident aliquam, dolor, aperiam, quas eos similique nam pariatur.
+  Placeat est at aut error quaerat nihil quam optio excepturi deserunt
+  recusandae distinctio magnam consequuntur ullam possimus ex asperiores ab
+  harum pariatur, eaque ad voluptas quo architecto neque nostrum? Quos impedit
+  dolores doloribus placeat, quod sint eos blanditiis maxime fugit at quia eaque
+  nostrum maiores laboriosam? Quis architecto itaque est iste eos voluptates
+  dolores, nihil tempore quidem, sapiente distinctio atque incidunt laudantium,
+  ab saepe explicabo natus aperiam magnam harum temporibus officia fuga adipisci
+  dolorum libero! Libero incidunt optio nesciunt quo, facilis tempore veniam sed
+  dolore possimus quibusdam voluptas dignissimos cupiditate nisi repellendus
+  odit repellat quaerat? Ducimus ex tempora, nemo dolore aliquam id dolorem
+  illum rerum reiciendis atque, architecto sed qui quam laudantium aperiam
+  fugiat. Placeat nesciunt laborum neque nobis amet, optio sit aspernatur
+  inventore exercitationem cum facere praesentium doloribus eos at? Amet totam
+  ad tempore optio maiores minus inventore quo vitae adipisci ullam, odio
+  voluptas commodi iure accusamus vero voluptatem quod in eveniet aliquid
+  veritatis rem illo! Porro provident nam, earum quae hic nostrum fuga ratione
+  quibusdam commodi, nulla non reiciendis rem distinctio dolorum dolor
+  aspernatur nisi numquam ducimus eaque! Labore dicta placeat numquam ut
+  doloribus molestiae accusantium voluptatem autem assumenda aperiam? Deserunt
+  repudiandae dolore cum harum! Laudantium dolorem nam, ratione tempore rem
+  consequuntur quas quos, numquam dignissimos accusamus a reiciendis aliquid
+  minus distinctio magni voluptas maiores eligendi repellat est similique itaque
+  ab. Veritatis ab autem nobis, nam recusandae maxime, maiores consequatur
+  sapiente earum ipsum minus quod delectus officiis est quia voluptate. Quis
+  esse, qui amet similique id expedita accusamus placeat quasi distinctio in et!
+  Architecto repellendus id esse facilis ratione voluptate animi necessitatibus
+  culpa nam, accusamus non magni, nulla, fugit quasi quis perferendis quam nihil
+  placeat nesciunt exercitationem commodi eligendi praesentium? Dicta
+  exercitationem porro vitae. Laudantium adipisci quasi placeat voluptate
+  architecto doloribus hic libero vel quo exercitationem, magnam sapiente
+  molestiae, atque dolores illum voluptatibus. Fuga quasi recusandae quis
+  blanditiis ipsum officiis accusamus reprehenderit, voluptas perferendis nulla
+  reiciendis nostrum obcaecati suscipit dolorum consectetur fugiat delectus
+  laudantium assumenda aliquam temporibus sunt a possimus. Qui nemo suscipit
+  quisquam iste, nisi sit error? Similique ab ut suscipit repellat rerum magnam
+  dolores molestias facilis, tenetur est pariatur quis architecto? Impedit
+  sapiente sint maiores debitis saepe a assumenda dolorem cum, est pariatur nam?
+  Quaerat voluptatem nostrum blanditiis, tenetur quia officiis deserunt, rem
+  veritatis eum tempora distinctio delectus voluptatibus optio molestias dolore
+  accusantium id totam quas aut vel iste sed aperiam. Odio tenetur consequatur
+  iste voluptate provident delectus quod corrupti nostrum quia soluta eos cum
+  rem, voluptatem, vitae quas corporis porro totam eum assumenda veritatis
+  deserunt repellendus obcaecati. Eum delectus error harum quam reiciendis
+  consequuntur, eaque nostrum ipsam quas ut voluptatibus quos architecto porro
+  alias enim ad at soluta maxime autem. Nesciunt dolorum molestiae illum,
+  eveniet laudantium illo officiis error assumenda reprehenderit.
+</p>
