feat(frontend): enhance header layout

--- a/frontend/nestin/src/app/components/header/header.component.html
+++ b/frontend/nestin/src/app/components/header/header.component.html
@@ -21,7 +21,8 @@
         <lucide-icon [img]="icons.menu" class="my-icon" size="18"></lucide-icon>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav d-flex ms-auto gap-4 align-items-center">
+        <ul
+          class="navbar-nav d-flex ms-auto gap-4 align-items-center px-5 py-3">
           <li class="nav-item">
             <a
               class="nav-link d-flex align-items-center gap-1"
