--- a/frontend/nestin/src/app/layouts/main-layout/main-layout.component.html
+++ b/frontend/nestin/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
+<div class="d-flex flex-column main-layout-container">
+  <app-header></app-header>
 
-<main class="container mx-auto py-4 flex-1">
-  <router-outlet></router-outlet>
-</main>
+  <main class="container mx-auto py-4 flex-grow-1">
+    <router-outlet></router-outlet>
+  </main>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
