--- a/frontend/nestin/src/app/layouts/main-layout/main-layout.component.html
+++ b/frontend/nestin/src/app/layouts/main-layout/main-layout.component.html
@@ -3,7 +3,7 @@
 
   <main class="container mx-auto py-4 flex-grow-1">
     <router-outlet></router-outlet>
+    <app-toast-container></app-toast-container>
   </main>
-
   <app-footer></app-footer>
 </div>
