--- a/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
+++ b/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column gap-5" style="min-height: 80vh">
   @if (isLoading) {
     <div class="d-flex justify-content-center align-items-center flex-grow-1">
-      <div class="spinner-border border-primary" role="status">
+      <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
